[project]
name = "lighthouse"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "activitysim>=1.5.1",
    "platformdirs>=4.10.0",
    "sharrow>=2.15.0",
]

[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "setuptools_scm>=8.0",
]
build-backend = "setuptools.build_meta"


[dependency-groups]
dev = [
    "altair",
    "gh",
    "ipykernel",  # so this env will appear in jupyter as a selection
    "jupyterlab",
    "larch>=6.0.46",
    "matplotlib",
    "numexpr",
    "pyinstrument==4.4",
    "pytest>=8.4.2",
    "pytest-cov",
    "pytest-regressions",
    "rich==13.3",
    "ruff",
    "setuptools_scm",
    "simwrapper > 1.7",
    "snakeviz",  # for profiling
    "xlsxwriter==3.2.5",
    "wring",
    "zarr>=2,<3",
    "zstandard"
]
